--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/console": "^6.0",
         "symfony/filesystem": "^6.0",
         "symfony/process": "^6.0",
+        "symfony/dotenv": "^6.0",
         "arvenil/ninja-mutex": "^0.6.0"
     },
     "require-dev": {
