docs: update .env.example with correct paths
WHY:
1. .env.example ファイルを更新して、PhpStorm のシステムディレクトリの正しいパスを示す
2. macOS 環境での PhpStorm の設定ディレクトリの場所を明確に説明する
3. ユーザーが自分の環境に合わせて .env ファイルを作成する際の参考になるようにする

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # PhpStorm binary paths
-PHPSTORM_INSPECT_SH=/path/to/PhpStorm/bin/inspect.sh
-PHPSTORM_SYSTEM_PATH=/path/to/.WebIde*/system
+# macOS の場合
+PHPSTORM_INSPECT_SH=/Applications/PhpStorm.app/Contents/bin/inspect.sh
+# または、カスタムインストールの場合
+# PHPSTORM_INSPECT_SH=/path/to/PhpStorm.app/Contents/bin/inspect.sh
+
+# PhpStorm のシステムディレクトリ（caches と index ディレクトリを含むディレクトリ）
+# macOS の場合
+PHPSTORM_SYSTEM_PATH=~/Library/Caches/JetBrains/PhpStorm<version>
+# 例: PHPSTORM_SYSTEM_PATH=/Users/username/Library/Caches/JetBrains/PhpStorm2024.3
